Added a scroll component.

--- a/src/components/card/card.style.css
+++ b/src/components/card/card.style.css
@@ -1,6 +1,7 @@
-.card-container {
+.card {
     display: flex;
     flex-direction: column;
+    width: 200px;
     background-color: rgba(0,212,255,1);
     border-radius: 25px;
     padding: 25px;
@@ -10,6 +11,6 @@
     transition: transform 0.25s ease-out;
   }
   
-  .card-container:hover {
+  .card:hover {
     transform: rotate(15deg);
   }
